Fixing vertical spacing for category tables #15

--- a/recycling-server/app/assets/stylesheets/categories.scss
+++ b/recycling-server/app/assets/stylesheets/categories.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the categories controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.category-container {
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-top: 10%;
+}
+
+.category-title-container {
+  width: auto;
+}
+
+.category-details {
+  display: none;
+}
+
+.category-details-active {
+  display: block;
+}
