--- a/recycling-server/app/assets/stylesheets/cities.scss
+++ b/recycling-server/app/assets/stylesheets/cities.scss
@@ -23,23 +23,13 @@
   padding-bottom: 50px;
 }
 
-.category-container {
+.city-category-container {
   padding-left: 10%;
   padding-right: 10%;
   padding-top: 0px;
 }
 
-.category-title-container {
-  width: auto;
-}
 
-.category-details {
-  display: none;
-}
-
-.category-details-active {
-  display: block;
-}
 
 .facility-map {
   padding-top: 0px;
